Cleanup Android TestController Code (#4638)