@@ -9,9 +9,6 @@ import android.content.Context;
 import android.os.Build;
 import android.util.Log;
 
-import Test.Common.ProcessControllerPrx;
-import Test.Common.ProcessControllerRegistryPrx;
-
 import com.zeroc.Ice.Communicator;
 import com.zeroc.Ice.Logger;
 import com.zeroc.Ice.Time;
@@ -35,11 +32,11 @@ public class ControllerApp extends Application {
             _class = (Class<? extends test.TestHelper>) _loader.loadClass(name);
         }
 
-        test.TestHelper newInstance() throws IllegalAccessException, InstantiationException {
+        test.TestHelper newInstance() throws ReflectiveOperationException {
             if (_class == null) {
                 return null;
             }
-            return _class.newInstance();
+            return _class.getDeclaredConstructor().newInstance();
         }
 
         ClassLoader getClassLoader() {
@@ -119,22 +116,20 @@ public class ControllerApp extends Application {
     public List<String> getAddresses(boolean ipv6) {
         List<String> addresses = new java.util.ArrayList<>();
         try {
-            java.util.Enumeration<java.net.NetworkInterface> ifaces =
-                    java.net.NetworkInterface.getNetworkInterfaces();
+            java.util.Enumeration<java.net.NetworkInterface> ifaces = java.net.NetworkInterface.getNetworkInterfaces();
             while (ifaces.hasMoreElements()) {
                 java.net.NetworkInterface iface = ifaces.nextElement();
                 java.util.Enumeration<java.net.InetAddress> addrs = iface.getInetAddresses();
                 while (addrs.hasMoreElements()) {
                     java.net.InetAddress addr = addrs.nextElement();
-                    if ((ipv6 && addr instanceof java.net.Inet6Address)
-                            || (!ipv6 && !(addr instanceof java.net.Inet6Address))) {
+                    boolean isInet6Address = addr instanceof java.net.Inet6Address;
+                    if ((ipv6 && isInet6Address) || (!ipv6 && !isInet6Address)) {
                         addresses.add(addr.getHostAddress());
                     }
                 }
             }
         } catch (java.net.SocketException ex) {
-            // Ignore, if we are not able to retrieve the network interfaces, we return an empty
-            // list.
+            // Ignore, if we are not able to retrieve the network interfaces, we return an empty list.
         }
         return addresses;
     }
@@ -186,102 +181,19 @@ public class ControllerApp extends Application {
             }
             else
             {
-                initData.properties.setProperty(
-                    "ControllerAdapter.AdapterId", java.util.UUID.randomUUID().toString());
+                initData.properties.setProperty("ControllerAdapter.AdapterId", java.util.UUID.randomUUID().toString());
                 initData.properties.setProperty("ControllerAdapter.Endpoints", "tcp");
                 if (bluetooth) {
-                    initData.properties.setProperty(
-                            "Ice.Plugin.IceBT", "com.zeroc.IceBT.PluginFactory");
+                    initData.properties.setProperty("Ice.Plugin.IceBT", "com.zeroc.IceBT.PluginFactory");
                 }
-                initData.properties.setProperty(
-                        "Ice.Plugin.IceDiscovery", "com.zeroc.IceDiscovery.PluginFactory");
+                initData.properties.setProperty("Ice.Plugin.IceDiscovery", "com.zeroc.IceDiscovery.PluginFactory");
                 initData.properties.setProperty("IceDiscovery.DomainId", "TestController");
             }
 
             _communicator = new com.zeroc.Ice.Communicator(initData);
-            com.zeroc.Ice.ObjectAdapter adapter =
-                    _communicator.createObjectAdapter("ControllerAdapter");
-            ProcessControllerPrx processController =
-                    ProcessControllerPrx.uncheckedCast(
-                            adapter.add(
-                                    new ProcessControllerI(),
-                                    com.zeroc.Ice.Util.stringToIdentity(
-                                            "Android/ProcessController")));
+            com.zeroc.Ice.ObjectAdapter adapter = _communicator.createObjectAdapter("ControllerAdapter");
+            adapter.add(new ProcessControllerI(), new com.zeroc.Ice.Identity("ProcessController", "Android"));
             adapter.activate();
-
-            if (!isEmulator())
-            {
-                // Use IceDiscovery to find a process controller registry
-                ProcessControllerRegistryPrx registry =
-                    ProcessControllerRegistryPrx.createProxy(_communicator, "Util/ProcessControllerRegistry");
-                registerProcessController(adapter, registry, processController);
-            }
-        }
-
-        public void registerProcessController(
-                final com.zeroc.Ice.ObjectAdapter adapter,
-                final ProcessControllerRegistryPrx registry,
-                final ProcessControllerPrx processController) {
-            registry.ice_pingAsync()
-                    .whenCompleteAsync(
-                            (r1, e1) -> {
-                                if (e1 != null) {
-                                    handleException(e1, adapter, registry, processController);
-                                } else {
-                                    com.zeroc.Ice.Connection connection =
-                                            registry.ice_getConnection();
-                                    connection.setAdapter(adapter);
-                                    connection.setCloseCallback(
-                                            con -> {
-                                                println(
-                                                        "connection with process controller"
-                                                                + " registry closed");
-                                                while (true) {
-                                                    try {
-                                                        Thread.sleep(500);
-                                                        break;
-                                                    } catch (InterruptedException e) {
-                                                        // Ignore and try again.
-                                                    }
-                                                }
-                                                registerProcessController(
-                                                        adapter, registry, processController);
-                                            });
-
-                                    registry.setProcessControllerAsync(processController)
-                                            .whenCompleteAsync(
-                                                    (r2, e2) -> {
-                                                        if (e2 != null) {
-                                                            handleException(
-                                                                    e2,
-                                                                    adapter,
-                                                                    registry,
-                                                                    processController);
-                                                        }
-                                                    });
-                                }
-                            });
-        }
-
-        public void handleException(
-                Throwable ex,
-                final com.zeroc.Ice.ObjectAdapter adapter,
-                final ProcessControllerRegistryPrx registry,
-                final ProcessControllerPrx processController) {
-            if (ex instanceof com.zeroc.Ice.ConnectFailedException
-                    || ex instanceof com.zeroc.Ice.TimeoutException) {
-                while (true) {
-                    try {
-                        Thread.sleep(500);
-                        break;
-                    } catch (InterruptedException e) {
-                        // Ignore and try again.
-                    }
-                }
-                registerProcessController(adapter, registry, processController);
-            } else {
-                println(ex.toString());
-            }
         }
 
         public void destroy() {
@@ -300,20 +212,12 @@ public class ControllerApp extends Application {
         public void communicatorInitialized(Communicator communicator) {}
 
         public java.io.InputStream loadResource(String path) {
-            switch (path) {
-                case "server.p12" -> {
-                    return getResources().openRawResource(R.raw.server);
-                }
-                case "client.p12" -> {
-                    return getResources().openRawResource(R.raw.client);
-                }
-                case "ca.p12" -> {
-                    return getResources().openRawResource(R.raw.ca);
-                }
-                default -> {
-                    return null;
-                }
-            }
+            return switch (path) {
+                case "server.p12" -> getResources().openRawResource(R.raw.server);
+                case "client.p12" -> getResources().openRawResource(R.raw.client);
+                case "ca.p12" -> getResources().openRawResource(R.raw.ca);
+                default -> null;
+            };
         }
 
         public void run() {
@@ -371,8 +275,7 @@ public class ControllerApp extends Application {
                 try {
                     wait(timeout * 1000L);
                     if (Time.currentMonotonicTimeMillis() - now > timeout * 1000L) {
-                        throw new Test.Common.ProcessFailedException(
-                                "timed out waiting for the process to be ready");
+                        throw new Test.Common.ProcessFailedException("timed out waiting for the process to be ready");
                     }
                 } catch (InterruptedException ex) {
                     // Ignore and try again.
@@ -390,8 +293,7 @@ public class ControllerApp extends Application {
                 try {
                     wait(timeout * 1000L);
                     if (Time.currentMonotonicTimeMillis() - now > timeout * 1000L) {
-                        throw new Test.Common.ProcessFailedException(
-                                "timed out waiting for the process to complete");
+                        throw new Test.Common.ProcessFailedException("timed out waiting for the process to complete");
                     }
                 } catch (InterruptedException ex) {
                     // Ignore and try again.
@@ -428,8 +330,7 @@ public class ControllerApp extends Application {
                 TestSuiteBundle bundle = new TestSuiteBundle(className, getClassLoader());
                 ControllerHelperI mainHelper = new ControllerHelperI(bundle, args);
                 mainHelper.start();
-                return Test.Common.ProcessPrx.uncheckedCast(
-                        current.adapter.addWithUUID(new ProcessI(mainHelper)));
+                return Test.Common.ProcessPrx.uncheckedCast(current.adapter.addWithUUID(new ProcessI(mainHelper)));
             } catch (Exception ex) {
                 throw new Test.Common.ProcessFailedException(
                         "testsuite `" + testsuite + "' exe ` " + exe + "' start failed:\n" + ex);
